# kafka-expert-bootcamp

./: .gitignore  README.md  TRAINING_ROADMAP.md  pyproject.toml  test_my_setup.py
docker/: docker-compose.yml
scripts/: setup-env.sh
src/: __init__.py
src/consumers/: basic_consumer.py
src/producers/: basic_producer.py
week-1-fundamentals/labs/: lab-01-environment-verification.md  lab-02-first-producer-consumer.md
week-1-fundamentals/theory/: 01-kafka-architecture.md
week-1-fundamentals/tutorials/: 01-environment-setup.md  02-first-producer-consumer.md
